-issue#5655: Function get_allowed_devices can returns incorrect device list if session user_id variable is not set
-issue#5660: Warning about unknown system hash during the update
-issue#5661: On Linux and *NIX variants Cacti is unable to find ping6 as it's not in the path
-issue#5662: installer - Undefined array key "name" warning in php8

1.2.26
-issue#5464: PHP warning when view Data Source Info mode with new Data Source
-issue#5481: Attempting to edit a Data Query that does not exist throws warnings and not an GUI error
-issue#5483: cacti 1.2.25 ubuntu server 22.04.3 php8.1 add device error
-issue#5485: Selecting a host device in System Utilities - View Data Query Cache raises error in cacti log
-issue#5489: remove_graphs.php does not handle "--preserve" option
-issue#5490: Database failure causes infinite recursion in cacti_log() followed by machine lockup
-issue#5492: Cacti 1.2.25 ss_host_cpu.php CPU graphs not updating anymore on Windows servers
-issue#5493: Multi select drop down list box not rendered correctly in Chrome and Edge
-issue#5494: typo error in name used in inserts array for selective_plugin_debug
-issue#5495: Upon upgrade, cacti falsely assumes that a plugin is not compatible, when it could simply not be present
-issue#5496: Plugin Management CLI does not work when multiple plugins are specified
-issue#5502: Errors related to php 8.3 and page generation including a checkbox
-issue#5503: Note, we could not process all your actions. Details are below
-issue#5514: DS Stats issues warnings when the RRDfile has not been initialized
-issue#5527: Upgrade from 0.8.8 to 1.2.25 (latest) fails on db upgrade due to missing data source profile id
-issue#5534: When deleting a single Data Source the table data_debug is not purged
-issue#5542: When a form element does not include a 'value' column, provide a more helpful warning message
-issue#5554: Interface description with equal sign (=) in ifAlias does not show Alias